Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
         <div class="row">
           <div class="label">
             <span>Support</span>
-            <span>For inquiries: support@yourdomain.tld</span>
+            <span>For inquiries: hbadrixyz@gmail.com</span>
           </div>
-          <a class="btn" href="mailto:support@yourdomain.tld">Email</a>
+          <a class="btn" href="mailto:hbadrixyz@gmail.com">Email</a>
         </div>
       </div>
     </section>
@@ -356,3 +356,4 @@
   </script>
 </body>
 </html>
+
