Fix HTML encoding issues in terms.html

--- a/terms.html
+++ b/terms.html
@@ -136,7 +136,7 @@
 
       <h3>8) Support</h3>
       <p>
-        Support contact: <a href="mailto:support@yourdomain.tld">support@yourdomain.tld</a>
+        Support contact: <a href="mailto:hbadrixyz@gmail.com">hbadrixyz@gmail.com</a>
       </p>
 
       <h3>9) Governing law</h3>
@@ -162,3 +162,4 @@
   </script>
 </body>
 </html>
+
