Update privacy policy content and structure

--- a/privacy.html
+++ b/privacy.html
@@ -133,7 +133,7 @@
 
       <h3>8) Contact</h3>
       <p>
-        Privacy inquiries: <a href="mailto:privacy@yourdomain.tld">privacy@yourdomain.tld</a>
+        Privacy inquiries: <a href="mailto:hbadrixyz@gmail.com">hbadrixyz@gmail.com</a>
       </p>
 
       <h3>9) Changes to this policy</h3>
@@ -159,3 +159,4 @@
   </script>
 </body>
 </html>
+
